mempool/mempool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mempool-db
  namespace: bitcoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mempool-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mempool-db
    spec:
      containers:
      - image: mariadb:10.5.21
        imagePullPolicy: IfNotPresent
        name: mempool-db
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: mempool-db-vol
          mountPath: /var/lib/mysql
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
      - name: mempool-db-vol
        persistentVolumeClaim:
          claimName: mempool-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mempool-db
  name: mempool-db
  namespace: bitcoin
spec:
  selector:
    app: mempool-db
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mempool-backend
  namespace: bitcoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mempool-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mempool-backend
    spec:
      containers:
      - image: mempool/backend:latest
        imagePullPolicy: IfNotPresent
        name: mempool-backend
        ports:
        - containerPort: 8999
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: mempool-backend-vol
          mountPath: /backend/cache
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
      - name: mempool-backend-vol
        persistentVolumeClaim:
          claimName: mempool-backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mempool-backend
  name: mempool-backend
  namespace: bitcoin
spec:
  selector:
    app: mempool-backend
  ports:
  - name: api
    port: 8999
    targetPort: 8999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mempool-frontend
  namespace: bitcoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mempool-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mempool-frontend
    spec:
      containers:
      - image: mempool/prontend:latest
        imagePullPolicy: IfNotPresent
        name: mempool-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mempool-frontend
  name: mempool-frontend
  namespace: bitcoin
spec:
  type: NodePort
  selector:
    app: mempool-frontend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30880
