mempool/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mempool
  namespace: bitcoin
spec:
  ingressClassName: nginx
  rules:
  - host: mempool.schmuckele.nl
    http:
      paths:
      - backend:
          service:
            name: mempool-frontend
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mempool.schmuckele.nl
    secretName: mempool.schmuckele.nl-tls
